@@ -2,6 +2,8 @@ This file documents the revision history for Perl web application WomenInBotany.
 
 {{$NEXT}}
 
+    - searching in list of botanist added  
+
 0.14      2014-09-08 16:41:44+02:00 Europe/Berlin
 
     - table status added
